@@ -1,0 +1,105 @@
+body {
+	background: black;
+	font-family: Verdana, Arial, Helvetica, Sans-Serif;
+	font-size: 10pt;
+	color: white;
+	margin: 0;
+}
+a {
+	font-weight: bold;
+	text-decoration: none;
+	color: #edd100;
+}
+a:hover {
+	text-decoration: underline;
+}
+table {
+	border-collapse: collapse;
+}
+table.fullwidth {
+	width: 100%;
+}
+tr {
+	vertical-align: top;
+}
+td, th {
+	border: solid 1px #a88c00;
+	text-align: left;
+}
+td {
+	background: black;
+}
+th {
+	background: #2b2b2b;
+	font-weight: bold;
+}
+
+div#title {
+	text-align: left;
+	position: absolute;
+	height: 20px;
+	top: 2px;
+	left: 2px;
+	width: 35%;
+	padding-left: 3px;
+	background: #2b2b2b;
+	border: solid 1px #a88c00;
+	border-right: none;
+}
+div#menu {
+	text-align: right;
+	position: absolute;
+	height: 20px;
+	top: 2px;
+	right: 2px;
+	width: 95%;
+	background: #2b2b2b;
+	border: solid 1px #a88c00;
+	border-left: none;
+	z-index: 1;
+}
+div#menu ul {
+	display: inline;
+}
+div#menu ul li {
+	display: inline;
+	line-height: 20px;
+	border-left: solid 1px #a88c00;
+	padding-left: 1em;
+	padding-right: 1em;
+}
+
+div#content {
+	position: absolute;
+	top: 27px;
+	left: 0;
+	width: 79%;
+	padding-left: 3px;
+}
+
+div#blocks {
+	position: absolute;
+	top: 27px;
+	right: 2px;
+	width: 20%;
+}
+div.block {
+	border: solid 1px #a88c00;
+	margin-bottom: 2em;
+	background: black;
+}
+div.block div.header {
+	background: #2b2b2b;
+	border-bottom: solid 1px #a88c00;
+	font-weight: bold;
+}
+
+hr {
+	border: 0;
+	border-top: solid 1px #a88c00;
+	color: transparent;
+	background-color: transparent;
+	height: 1px;
+	margin-top: 1em;
+	margin-bottom: 1em;
+}
