@@ -4,6 +4,8 @@ if (isset($_REQUEST['theme'])) {
 }
 
 include_once('default/theme.php');
+include_once('black/theme.php');
+include_once('blue/theme.php');
 include_once('boba/theme.php');
 include_once('bobaflip/theme.php');
 include_once('foldout/theme.php');
@@ -11,6 +13,8 @@ include_once('foldout/theme.php');
 function get_themes() {
 	return array(
 		'default' => new Theme_Holonet(),
+		'black' => new Theme_BlackGold(),
+		'blue' => new Theme_BlueMonday(),
 		'boba' => new Theme_Boba(),
 		'bobaflip' => new Theme_BobaFlip(),
 		'foldout' => new Theme_FoldOut(),
